[tool.poetry]
name = "dispike"
version = "1.0.1-beta.0"
description = "An independent, simple to use, powerful framework for creating interaction-based Discord bots. Powered by FastAPI"
authors = ["Mustafa Mohamed <ms7mohamed@gmail.com>"]
repository = "https://github.com/ms7m/dispike"
readme = "README.md"
license = "MIT"
documentation = "https://dispike.ms7m.me?ref=pypi"


[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
loguru = "^0.5.3"
fastapi = "^0.63.0"
pydantic = "1.8.2"
typing-extensions = "^3.7.4"
PyNaCl = "^1.4.0"
httpx = "^0.16.1"
uvicorn = "^0.13.2"
async-timeout = "^3.0.1"



[tool.poetry.dev-dependencies]
pytest = "6.*"
black = "^20.8b1"
mypy = "^0.790"
uvicorn = "^0.13.2"
requests = "^2.25.1"
pytest-asyncio = "^0.14.0"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
respx = "^0.16.3"
mkdocstrings = "^0.13.6"
mkdocs-material = "7.1.6"
mkdocs-markdownextradata-plugin = "^0.2.0"
pymdown-extensions = "^8.1"
twine = "^3.3.0"
pytest-sugar = "^0.9.4"
async-asgi-testclient = "^1.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"